# foreground

./: .flake8  Dockerfile  README.md  pyproject.toml
IS-Net/: app.py  data_loader_cache.py
IS-Net/models/: isnet.py
app/: main.py
foreground/: app.py  download.py  load.py  predict.py
foreground/models/: __init__.py  isnet.py  rebnconv.py  rsu.py  utils.py
static/css/: upload.css
templates/: base.html  page.html
templates/include/: upload.html
