[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "foreground"
version = "0.0.0"
license = "Apache-2.0"
description = ""
authors = ["José Medeiros <joseprsm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
requests = "^2.28.1"
gdown = "^4.5.1"
matplotlib = "^3.5.3"
opencv-python = "^4.6.*"
Pillow = "^8.0.0"
scikit-image = "^0.15.0"
fastapi = "^0.82.0"
